--- a/AttenceProject/zTree_v3/demo/cn/core/simpleData.html
+++ b/AttenceProject/zTree_v3/demo/cn/core/simpleData.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <HTML>
 <HEAD>
 	<TITLE> ZTREE DEMO - Simple Data</TITLE>
@@ -44,7 +44,7 @@
 			{ id:223, pId:22, name:"叶子节点223"},
 			{ id:224, pId:22, name:"叶子节点224"},
 			{ id:23, pId:2, name:"父节点23 - 折叠"},
-			{ id: 231, pId: 23, name: "叶子节点231" },
+			{ id:231, pId:23, name:"叶子节点231"},
 			{ id:232, pId:23, name:"叶子节点232"},
 			{ id:233, pId:23, name:"叶子节点233"},
 			{ id:234, pId:23, name:"叶子节点234"},
